--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https:/yef-marcano.github.io/ym-crud-reactjs",
-  "name": "ym-crud-reactjs",
+  "homepage": "https:/yef-marcano.github.io/code-ym-reactjs-crud",
+  "name": "code-ym-reactjs-crud",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
